<resources>
    <string name="nav_header_desc">Navigation header</string>
    <string name="address">Sample Company</string>
    <string name="tos_url">https://tapkey.com/pages/terms-conditions</string>
    <string name="menu_keys">Keys</string>
    <string name="menu_about">About</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="i_accept_the_terms_and_conditions">I accept the <u>terms and conditions</u>.</string>
    <string name="sign_in_using_your_phone_number">Sign in using your phone number:</string>
    <string name="continue_sign_in">Continue</string>
    <string name="resend_code">Resend Code</string>
    <string name="resend_code_in">Resend Code in %02d</string>
    <string name="wrong_code">Wrong code</string>
    <string name="code_error">There was an error, please try again.</string>
    <string name="enter_the_code_that_was_sent_to_you">Enter the code that was sent to you:</string>
    <string name="phone_number_error_missing_code">Please include the international calling code, e.g. +49</string>
    <string name="phone_number_invalid_error">This is not a valid phone number.</string>
    <string name="phone_number_too_many_request">We received too many requests from this device. Please try again later.</string>
    <string name="phone_number_error">There was an error, please try again.</string>
    <string name="sign_out_warning_title">Sign out?</string>
    <string name="sign_out_warning_message">After signing out, you won\'t be able to access your keys any more.</string>
    <string name="sign_out_warning_positive">Sign out</string>
    <string name="sign_out_warning_cancel">Cancel</string>
    <string name="phone_number_hint">+49123456789</string>
    <string name="restricted">Restricted</string>
    <string name="unrestricted">Unrestricted</string>
    <string name="key_details">Key Details</string>
    <string name="key_always_valid">This key has unrestricted validity.</string>
    <string name="key_restricted">This key is restricted.</string>
    <string name="key_offline_access">You can use this key to access %1$s offline until %2$s. It will be renewed on %3$s.</string>
    <string name="nfc_needs_to_be_enabled_for_this_app_to_work">NFC needs to be enabled for this app to work.</string>
    <string name="ble_needs_to_be_enabled_for_this_app_to_work">BLE needs to be enabled for this app to work.</string>
    <string name="ble_permission_required_for_this_app_to_work">Permission to use BLE is required for this app to work.</string>
    <string name="location_needs_to_be_enabled_for_this_app_to_work">Location needs to be enabled for this app to work.</string>
    <string name="enable">Enable</string>
    <string name="allow">Allow</string>
    <string name="nearby">Nearby</string>
    <string name="other">Other</string>
    <string name="no_nearby">No locks are nearby.</string>
    <string name="open">open</string>
    <string name="locking">Locking</string>
    <string name="locking_unlocking">Locking/Unlocking</string>
    <string name="version">Version %s</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="hce_aiddescription">NFC Lock Communication Service</string>
    <string name="notification_channel_name">Tapkey NFC</string>
    <string name="notification_channel_description">See the state of locking and unlocking actions conducted via NFC.</string>
    <string name="ok">Ok</string>
    <string name="success">Success</string>
    <string name="generic_error">Error. Something went wrong. Please try again.</string>
    <string name="not_bound_error">This lock is not yet registered. Please register the lock in order to manage it.</string>
    <string name="wrong_lock_mode">This action cannot be performed right now because the lock is in owner mode.</string>
    <string name="unauthorized_error">You\'re not authorized.</string>
    <string name="unauthorized_not_yet_valid_error">You have a permission to access later.</string>
    <string name="lock_version_too_old_error">Please upgrade your lock.</string>
    <string name="lock_version_too_young_error">Please update your app.</string>
    <string name="server_communication_error">Server error. Please check your internet connection and try again.</string>
    <string name="server_communication_error_offline">You seem to be offline. Please check your internet connection and try again.</string>
    <string name="lock_date_time_invalid_error">The time of the lock\'s clock is invalid.</string>
    <string name="lock_communication_error">Connection to the lock was lost. Please try again.</string>
    <string name="lock_not_fully_assembled">The lock does not seem to be correctly assembled.</string>
    <string name="connection_lost">Bluetooth connection has been lost.</string>
    <string name="ble_connection_err">Bluetooth connection couldn\'t be established.</string>
    <string name="nfc_transport_error">The connection was lost. Please try again.</string>
    <string name="concurrency_error">A different task is currently ongoing. Please try again later.</string>
    <string name="lock_protocol_error">Something went wrong. Please try again.</string>
    <string name="unexpected_lock_response_error">Something went wrong. Please try again.</string>
    <string name="illegal_lock_state">This lock is in an unexpected state.</string>
    <string name="different_device">This is a different lock. Please use the correct lock.</string>
    <string name="session_broken">Please try again to complete the operation.</string>
    <string name="network_error">Please check the internet connectivity.</string>
    <string name="network_error_offline">No Internet. Please check the internet connectivity.</string>
    <string name="server_side_error">Something went wrong. Please try again.</string>
    <string name="transport_protocol_error">An unexpected error occurred. Please try again.</string>
</resources>